# ray

./: .gitignore  Cargo.toml  README.md  default.nix  deny.toml  flake.nix  rustfmt.toml  shell.nix
nix/: default.nix  shell.nix  treefmt.nix
nix/.github/workflows/: nix.yml
src/: cli.rs  lib.rs  main.rs  utils.rs
