[package]
name = "ray"
version = "0.9.0"
edition = "2021"
authors = ["Jarmo Riikonen <amatrelan@gmail.com>"]
homepage = "https://github.com/Amatrelan/ray"
repository = "https://github.com/Amatrelan/ray"
keywords = ["linux", "backlight"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
human-panic = "1.2.2"
strip-ansi-escapes = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
