[package]
name = "ray"
version = "0.9.0"
edition = "2021"
authors = ["Jarmo Riikonen <github.afterglow462@passmail.net>"]
homepage = "https://github.com/Amatrelan/ray"
repository = "https://github.com/Amatrelan/ray"
keywords = ["linux", "backlight"]
categories = ["command-line-utilities"]
description = "Simple backlight management tool"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
log = "0.4.21"
simplelog = "0.12.2"
strip-ansi-escapes = "0.2.0"
