[package]
name = "ray"
version = "0.9.1"
edition = "2021"
authors = ["Amatrelan <github.afterglow462@passmail.net>"]
homepage = "https://github.com/Amatrelan/ray"
repository = "https://github.com/Amatrelan/ray"
keywords = ["linux", "backlight"]
categories = ["command-line-utilities"]
description = "Simple backlight management tool"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
simplelog = "0.12.2"
